# botwaf

./: .env.example  .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  build.rs  cargo.toml  run.sh  rust-toolchain.toml
.github/: CLA.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/build-app-images/: action.yml
.github/actions/build-botwaf-binary/: action.yml
.github/actions/build-images/: action.yml
.github/actions/build-linux-artifacts/: action.yml
.github/actions/build-macos-artifacts/: action.yml
.github/actions/build-windows-artifacts/: action.yml
.github/actions/fuzz-test/: action.yaml
.github/actions/publish-github-release/: action.yml
.github/actions/release-cn-artifacts/: action.yaml
.github/actions/upload-artifacts/: action.yml
.github/scripts/: copy-image.sh  upload-artifacts-to-s3.sh
.github/workflows/: dev-build.yml  develop.yml  nightly-build.yml  release.yml
deployment/etl/nginxlog/: default_nginxlog_etl.py
docs/deploy/: build-and-deploy-on-docker.md  deploy-on-kubernetes.md
docs/devel/: 1.prerequisites-for-dev.md  2.build-and-test-for-dev.md
docs/how-to/: how-to-profile-cpu.md  how-to-profile-memory.md
etc/: botwaf.yaml
src/: lib.rs  main.rs
src/cache/: mod.rs  redis.rs
src/cmd/: Cargo.toml  build.rs
src/cmd/src/: botwaf.rs  lib.rs
src/cmd/src/apm/: metric_jemalloc.rs  mod.rs  profiling.rs
src/cmd/src/cmd/: error.rs  forwarder.rs  management.rs  mod.rs  profiling.rs  server.rs  standalone.rs  updater.rs  verifier.rs
src/cmd/src/cmd/apm/: dyn_log.rs  mod.rs  profiling.rs
src/common/audit-log/src/: lib.rs
src/common/error/src/: ext.rs  lib.rs  status_code.rs
src/common/macro/src/: admin_fn.rs
src/common/mem-prof/: Cargo.toml  README.md
src/common/mem-prof/src/: dummy.rs  error.rs  jemalloc.rs  lib.rs  unix_jemalloc.rs
src/common/mem-prof/src/jemalloc/: error.rs
src/common/pprof/: Cargo.toml
src/common/pprof/src/: dummy.rs  error.rs  lib.rs  nix.rs  unix_pprof.rs
src/common/telemetry/: Cargo.toml
src/common/telemetry/src/: lib.rs  logging.rs  macros.rs  metric.rs  panic_hook.rs  pyroscope_agent.rs  tracing_sampler.rs
src/config/: config.rs  constant.rs  mod.rs  swagger.rs
src/forwarder/: Cargo.toml
src/forwarder/src/: forwarder_base.rs  forwarder_http.rs  lib.rs
src/forwarder/src/handler/: forwarder.rs  forwarder_http.rs  ipfilter.rs  mod.rs
src/forwarder/src/ipfilter/: ipfilter.rs  ipfilter_redis.rs  mod.rs
src/forwarder/src/route/: mod.rs  proxy.rs
src/handler/: llm_handler.rs  llm_handler_langchain.rs  mod.rs
src/logging/: logging.rs
src/server/: Cargo.toml  forward_handler.rs  forward_handler_http.rs  forwarder.rs  forwarder_http.rs  ipfilter.rs  ipfilter_handler.rs  ipfilter_handler_redis.rs  ipfilter_redis.rs  knowledge_handler.rs  knowledge_router.rs  mod.rs  server.rs
src/server/benches/: path_matching.rs
src/server/src/: lib.rs
src/server/src/cache/: memory.rs  redis.rs
src/server/src/config/: config.rs  mod.rs  resources.rs  swagger.rs
src/server/src/context/: state.rs
src/server/src/handler/: llm_handler_langchain.rs
src/server/src/llm/handler/: llm_base.rs  llm_handler.rs  llm_handler_langchain.rs  llm_langchain.rs  mod.rs
src/server/src/llm/route/: knowledge_router.rs  mod.rs  server.rs
src/server/src/logging/: logging.rs  mod.rs
src/server/src/mgmt/: health.rs  mod.rs
src/server/src/mgmt/apm/: logging.rs  metrics.rs  mod.rs  otel.rs  profiling.rs
src/server/src/modules/: mod.rs
src/server/src/modules/llm/: mod.rs
src/server/src/modules/llm/handler/: llm_base.rs  llm_langchain.rs
src/server/src/modules/llm/route/: knowledge_router.rs  mod.rs
src/server/src/server/: forwarder.rs  forwarder_http.rs  ipfilter.rs  knowledge_router.rs  server.rs
src/server/src/store/: documents_mongo.rs  documents_sqlite.rs  mod.rs  mongo.rs  postgres.rs  sqlite.rs  users_mongo.rs  users_postgresql.rs  users_sqlite.rs
src/server/src/sys/handler/: auth_handler.rs  mod.rs  user_handler.rs
src/server/src/sys/route/: auth_router.rs  mod.rs  user_router.rs
src/server/src/sys/store/: mod.rs  users_mongo.rs  users_postgresql.rs  users_sqlite.rs
src/server/src/util/: auths.rs  mod.rs  oauth2.rs  oidcs.rs  web.rs
src/server/src/waf/: forwarder.rs  forwarder_http.rs  ipfilter.rs  ipfilter_redis.rs
src/server/tests/: integration.rs
src/server/tests/cache/: redis.rs
src/server/tests/store/: mod.rs
src/server/tests/sys/route/: auth_router.rs  mod.rs
src/standalone/: Cargo.toml  standalone.rs
src/standalone/src/: lib.rs  standalone.rs
src/types/: Cargo.toml  knowledge.rs  mod.rs  server.rs
src/types/src/: forwarder.rs  lib.rs  user.rs
src/types/src/api_v1/: users.rs
src/types/src/modules/: mod.rs
src/types/src/modules/forward/: mod.rs
src/types/src/modules/llm/: mod.rs
src/types/src/sys/: mod.rs  user.rs
src/updater/: Cargo.toml  analytic_handler.rs  analytic_handler_llm.rs  mod.rs  updater.rs  updater_base.rs  updater_handler.rs  updater_handler_llm.rs  updater_langchain.rs  updater_simple_llm.rs
src/updater/src/: lib.rs  updater.rs  updater_base.rs  updater_simple_llm.rs
src/utils/: Cargo.toml
src/utils/src/: base64s.rs  httpclients.rs  inets.rs  lib.rs  panics.rs  rsa_ciphers.rs  secrets.rs  tokio_signal.rs  types.rs
src/verifier/: Cargo.toml  mod.rs  verifier.rs  verifier_base.rs  verifier_execution.rs  verifier_handler.rs  verifier_handler_execution.rs  verifier_simple_execution.rs
src/verifier/src/: lib.rs  verifier.rs  verifier_base.rs  verifier_simple_execution.rs
tooling/: run.sh
tooling/deploy/compose/: docker-compose.yaml
tooling/deploy/migrations/postgresql/v20240710-1/: sys.init.ddl.sql
tooling/deploy/migrations/sqlite/v20240710-1/: sys.init.ddl.sql
tooling/etl/: README.md
tooling/etl/nginxlog/: default_nginxlog_etl.sh
