[package]
name = "botwaf-cmd"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Other modules dependencies.
common-error = { workspace = true }
common-mem-prof = { workspace = true, optional = true }
common-pprof = { workspace = true, optional = true }
common-telemetry.workspace = true
botwaf-server.workspace = true
botwaf-updater.workspace = true
botwaf-verifier.workspace = true
botwaf-forwarder.workspace = true
botwaf-types.workspace = true
botwaf-utils.workspace = true

# Thirdparty dependencies.
mimalloc.workspace = true
axum-macros.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
axum.workspace = true
axum-prometheus.workspace = true
tower.workspace = true
tower-http.workspace = true
tower-cookies.workspace = true
lazy_static.workspace = true
log.workspace = true
tracing.workspace = true
snafu.workspace = true

[[bin]]
name = "botwaf"
path = "src/bin/botwaf.rs"

[build-dependencies]
chrono.workspace = true

[features]
# default = ["servers/pprof", "servers/mem-prof"]
profiling-tokio-console = ["common-telemetry/profiling-tokio-console"]
profiling-pyroscope = ["common-telemetry/profiling-pyroscope"]
profiling-mem-prof = ["common-mem-prof"]
profiling-pprof = ["common-pprof"]