[package]
name = "botwaf-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Other modules dependencies.
common-makestruct.workspace = true
botwaf-utils.workspace = true

# Thirdparty dependencies.
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true
validator.workspace = true
chrono.workspace = true
hyper.workspace = true
anyhow.workspace = true
sqlx.workspace = true
